Bug 556876 - PropertyDescriptor::initialize can throw a SyntaxError instead of a TypeError.  r=jorendorff